Update:ストップウォッチ用の処理を修正　ボタン用の画像を追加

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
     width: 270px;
 }
 
+img {
+    object-fit: contain;
+}
+
 .main {
     width: 95%;
     margin: 5px auto;
@@ -62,6 +66,7 @@ body {
     border-radius: 10px;
     border: none;
     cursor: pointer;
+    background-color: #E6E6E6;
 }
 
 .button-icon:hover {
